vlib/v/checker/tests/static_maps_err.vv
@[unsafe]
fn foo() map[string]int {
	mut static x := map[string]int{}
	return x
}

fn main() {
	unsafe {
		foo()
	}
}
